--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "https://api.gjufiles.com/api/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
